# meal-planner

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test-build-deploy.yml
content/: admin.py  api.py  apps.py  models.py  services.py  tasks.py  translation.py
content/migrations/: 0001_initial.py
core/: admin.py  api.py  redis.py  settings.py  urls.py  views.py
docker/: Dockerfile
frontend/: index.html  openapi-ts.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css  test-setup.ts
frontend/src/api/: index.ts  (+2 more)
meals/: admin.py  api.py  apps.py  models.py  schemas.py  services.py  signals.py  tasks.py  tests_collaboration.py  tests_recipe_collaboration.py  translation.py
meals/api/: __init__.py  camps.py  ingredients.py  inventory.py  meals.py  recipes.py  shopping.py
meals/migrations/: 0001_initial.py  0002_alter_shoppinglist_camp.py  0003_ingredientunitconversion_needs_review.py  0004_dietarypreference_campmeal_serves_preference_and_more.py  0005_remove_dietarypreference_base_unit_and_more.py  0006_shoppinglistitem_source_meals_text.py  0007_recipe_is_importing.py  0008_shoppinglist_meals.py  0009_camp_notes.py  0010_campmeal_is_done.py  0011_camp_collaborators.py  0012_recipe_collaborators.py  0013_ingredient_name_de_ingredient_name_fr_and_more.py
meals/schemas/: __init__.py  camps.py  general_items.py  ingredients.py  inventory.py  meals.py  recipes.py  shopping.py
meals/tests/: test_recipe_collaboration.py
templates/registration/: invite_set_password_email.html  invite_set_password_subject.txt  password_reset_email.html  password_reset_subject.txt
(+52 files in other folders)
